<resources>
    <string name="app_name">AttackerTracker</string>
    <string name="next_round">Next Round</string>
    <string name="begin_encounter">Begin Encounter</string>
    <string name="resume_encounter">Resume Encounter</string>
    <string name="combatant_name_placeholder">Combatant Name</string>
    <string name="group_name_placeholder">Group Name</string>
    <string name="add_combatant">Add</string>
    <string name="settings">Settings</string>
    <string name="reset_encounter">Reset Encounter</string>
    <string name="import_roster">Import Roster</string>
    <string name="export_roster">Export Roster</string>
    <string name="view_saved_combatants_title">Add/Deploy Combatants</string>
    <string name="open_bookmarks">Open Bookmarked Fighters</string>
    <string name="sort_init">Sort: Initiative</string>
    <string name="sort_alpha">Sort: Alphabetically </string>
    <string name="cheat_mode">Dice Cheat Mode</string>
    <string name="restart_combat">Restart Combat</string>
    <string name="new_combatant">+ New Combatant</string>
    <string name="add_to_group">Add to Group…</string>
    <string name="remove_from_group">Remove from Group…</string>
    <string name="view_group_title">View Group</string>
    <string name="no_combatants_for_group">Nothing is currently selected!  Not adding to group.</string>
    <string name="multiples_of_combatant_for_group">One or more combatants are already in this group.  Add multiples of a Combatant by editing the group!</string>
    <string name="confirm_delete_combatant_title">Delete Combatant?</string>
    <string name="confirm_delete_combatant">Are you sure you want to delete %1$s?</string>
    <string name="confirm_delete_combatant_in_group">Are you sure you want to delete %1$s?  They will also be deleted from any groups they\'re in!</string>
    <string name="confirm_delete_group">Are you sure you want to delete this group?</string>
    <string name="confirm_remove_combatant_from_group_title">Remove From Group?</string>
    <string name="confirm_single_remove_from_group_one_copy">Are you sure you want to remove this combatant from the group?</string>
    <string name="confirm_single_remove_from_group_multiple_copies">Remove ALL COPIES of this combatant from the group?</string>
    <string name="confirm_multiselect_remove_from_group_one_copy">Remove these combatants from the group?</string>
    <string name="confirm_multiselect_remove_from_group_multiple_copies">Remove ALL COPIES these combatants from the group?</string>
    <string name="confirm_delete_group_title">Delete Group?</string>
    <string name="confirm_delete_group_message_single">Removing the last combatant will delete this entire group.  Continue?</string>
    <string name="confirm_delete_group_message_multiple">Removing all remaining combatants will delete this entire group.  Continue?</string>
    <string name="confirm_add_group_to_group">Add all combatants from the selected group(s) to a group?</string>
    <string name="confirm_add_group_combatants">Add the %1$d combatants from group \"%2$s\"?</string>
    <string name="combatant_multiple_attempt_zero">To remove this combatant from the group, use the remove button.</string>
    <string name="combatant_multiple_range">Multiple must be between %1$d and %2$d</string>
    <string name="confirm_add_combatant_from_group">%1$s is already in combat.  Add another copy of %1$s anyway?</string>
    <string name="confirm_not_create_group">Group will not be created.  Continue?</string>
    <string name="confirm_copy_combatant">Copy this combatant?</string>
    <string name="confirm_copy_group">Copy this group?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="icon_title">Choose an Icon</string>
    <string name="explode_head">&#129327;</string>
    <string name="iap_shared_prefs_file">iap_shared_prefs_file</string>
    <string name="was_purchased">was_purchased</string>
    <string name="was_acknowledged">was_acknowledged</string>
    <string name="token_sent">token_sent</string>
    <string name="mail_address">attackertrackerapp@gmail.com</string>
    <string name="mail_p">AttackTheTracker!</string>
    <string name="dev_address">sambrownur@gmail.com</string>
    <string name="feedback_subject">AttackerTracker Feedback</string>
    <string name="add_combatant_resurrect_check_title">Add New Copy?</string>
    <string name="add_combatant_resurrect_check_message">A combatant with this name has already appeared in this encounter.  Resurrect the previous version, or create a new copy?</string>
    <string name="copy_combatant">New Copy</string>
    <string name="resurrect_combatant">Resurrect Combatant</string>
    <string name="copy_combatant_warning">Future versions of this combatant will also be added as copies. Resurrect by renaming one of these new copies.</string>
    <string name="mod_combatant_resurrect_check_title">Add New Copy?</string>
    <string name="mod_combatant_resurrect_check_message">A combatant with this name has already appeared in this encounter.  Resurrect the previous version, or save modifications made to this combatant?</string>
    <string name="keep_combatant">Save Modifications</string>
    <string name="add_combatant_overwrite_check_title">Overwrite Combatant?</string>
    <string name="add_combatant_overwrite_check_message">A combatant named %1$s is already present.  Overwrite this combatant?</string>
    <string name="add_group_overwrite_check_title">Overwrite Group?</string>
    <string name="add_group_overwrite_check_message">A group named %1$s is already present.  Overwrite this group?</string>
    <string name="no_combatants">There are no combatants here!</string>
    <string name="dont_seem_combatants">There don\'t seem to be any saved combatants here!</string>
    <string name="empty_configure_list">
        "Select your RPG system in Settings, then add some combatants using the + button.

When you have all of your combatants ready, hit \"BEGIN ENCOUNTER\" to begin combat!

TIP: Add or remove combatants at any time during combat by hitting the back button.  Use the red up-arrow to see the combat history."</string>
    <string name="empty_encounter_list">
        "There are no combatants here!

Go back to the previous screen, add some, and then start the encounter again to get back here!"</string>
    <string name="empty_add_combatants">
        "Add a combatant using the button below.  They will automatically be saved for future use!

TIP: Save a combatant\'s default initiative modifier here.  It can be changed during combat."</string>
    <string name="encounter_next_combatant">Next Combatant!</string>
    <string name="encounter_roll_initiative">Roll Initiative!</string>
    <string name="encounter_begin_round">Begin Round!</string>
    <string name="encounter_prepare_next_round">Next Round!</string>
    <string name="encounter_end_of_round">End Of Round!</string>
    <string name="encounter_computer_rolled_symbol">"?"</string>
    <string name="prepare_message">Adjust %1$s!</string>
    <string name="end_of_round_message">Perform End of Round Actions!</string>
    <string name="end_of_round_disable_message">(This can be disabled in settings)</string>
    <string name="dice_out_of_bounds_message">The dice value must be between 0 and %1$d</string>
    <string name="name_already_used">The name \"%1$s\" is already being used.  Any other modifications were saved.</string>
    <string name="encounter_round_number">Round:</string>
    <string name="configure_title" translatable="false">""</string>
    <string name="encounter_title" translatable="false">""</string>
    <string name="mod_combatant">Modify Combatant</string>
    <string name="create_combatant">Create New Combatant</string>
    <string name="combatant_name">Name:</string>
    <string name="combatant_icon">Icon:</string>
    <string name="combatant_faction">Faction:</string>
    <string name="leave_app_title">Close AttackerTracker?</string>
    <string name="leave_app_message">Are you sure you want to leave and lose this encounter\'s data?</string>
    <string name="clear_encounter_title">Clear Encounter?</string>
    <string name="clear_encounter_message">Are you sure you want to delete this encounter?</string>
    <string name="mod_create_close_title">Lose changes</string>
    <string name="mod_create_close_message">Are you sure you want to delete any changes you have made?</string>
    <string name="restart_combat_title">Restart combat?</string>
    <string name="restart_combat_message">Are you sure you want to restart combat?</string>
    <string name="group_header">Groups</string>
    <string name="party_header">Party Combatants</string>
    <string name="enemy_header">Enemy Combatants</string>
    <string name="neutral_header">Neutral Combatants</string>
    <string name="key_screen">KeyPreferenceScreen</string>
    <string name="init_calc_header">Initiative Calculation</string>
    <string name="combat_flow_header">Combat Flow</string>
    <string name="display_header">Display</string>
    <string name="ad_header">Ad Settings</string>
    <string name="info_header">Info</string>
    <string name="preset_select">Presets</string>
    <string name="dice_size">Dice Size Used</string>
    <string name="sort_order">Initiative Order</string>
    <string name="tie_breaker">Initiative Tie-Breaker</string>
    <string name="modifier_used">Modifier Used</string>
    <string name="key_preset">KeyPreset</string>
    <string name="key_dice_size">KeyDice</string>
    <string name="key_sort_order">KeySort</string>
    <string name="key_tie_breaker">KeyTie</string>
    <string name="key_mod_used">KeyMod</string>
    <string name="key_player_roll">KeyPlayerRoll</string>
    <string name="key_re_roll">KeyReRoll</string>
    <string name="key_end_of_round">KeyEndOfRound</string>
    <string name="key_individual_initiative">KeyGroupInitiative</string>
    <string name="rpg_ver_entry_dnd3">d3</string>
    <string name="sort_low_first">Lowest Goes First</string>
    <string name="tie_modifier">Best Modifier</string>
    <string name="mod_speed">Speed Factor</string>
    <string name="re_roll_string">Re-roll Initiative Each Round</string>
    <string name="re_roll_summary">If unchecked, the same initiative rolls will be used for every round</string>
    <string name="end_of_round_action_string">Pause at End Of Round</string>
    <string name="end_of_round_summary">Useful for End-Of-Round Actions</string>
    <string name="individual_initiative_string">Initiative Per Combatant</string>
    <string name="individual_initiative_summary">Roll initiative for each combatant, or for each faction</string>
    <string name="player_roll_title">Roll Your Own Initiative</string>
    <string name="player_roll_summary">Let the players roll their own initiative by default</string>
    <string name="key_dark_mode">KeyDarkMode</string>
    <string name="key_button_anim">KeyButtonAnim</string>
    <string name="dark_mode_string">Dark Mode</string>
    <string name="button_anim_string">Animate Initiative Button</string>
    <string name="key_ads_category">KeyAdCategory</string>
    <string name="key_ad_location">KeyAdLoc</string>
    <string name="key_purchase">KeyPurchase</string>
    <string name="purchase_string">Remove Ads…</string>
    <string name="ad_location_string">Ad Banner Location</string>
    <string name="ad_loc_bottom_below">Bottom (Below Main Button)</string>
    <string name="key_credits">KeyCredits</string>
    <string name="credits_string">About</string>
    <string name="key_feedback">KeyFeedback</string>
    <string name="feedback_title">Email Developer…</string>
    <string name="feedback_string">Suggestions? Questions? Email me!</string>
    <string name="view_group_name_label">Name:</string>
    <string name="view_group_combatants_label">Combatants In Group:</string>
</resources>