<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="@string/key_screen">

    <PreferenceCategory
        android:key="dnd_category"
        android:title="@string/init_calc_header"
        app:initialExpandedChildrenCount="1">

        <DropDownPreference
            android:defaultValue="@string/rpg_ver_entry_dnd3"
            android:entries="@array/rpg_ver_vals"
            android:entryValues="@array/rpg_ver_entry_vals"
            android:key="@string/key_preset"
            android:title="@string/preset_select"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="10"
            android:key="@string/key_dice_size"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/dice_size"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            android:defaultValue="@string/sort_low_first"
            android:entries="@array/sort_vals"
            android:entryValues="@array/sort_entry_vals"
            android:key="@string/key_sort_order"
            android:title="@string/sort_order"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            android:defaultValue="@string/tie_modifier"
            android:entries="@array/tie_vals"
            android:entryValues="@array/tie_entry_vals"
            android:key="@string/key_tie_breaker"
            android:title="@string/tie_breaker"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            android:defaultValue="@string/mod_speed"
            android:entries="@array/mod_vals"
            android:entryValues="@array/mod_entry_vals"
            android:key="@string/key_mod_used"
            android:title="@string/modifier_used"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="combat_flow_category"
        android:title="@string/combat_flow_header">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_player_roll"
            android:summary="@string/player_roll_summary"
            android:title="@string/player_roll_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_re_roll"
            android:summary="@string/re_roll_summary"
            android:title="@string/re_roll_string" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_individual_initiative"
            android:summary="@string/individual_initiative_summary"
            android:title="@string/individual_initiative_string" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_end_of_round"
            android:summary="@string/end_of_round_summary"
            android:title="@string/end_of_round_action_string" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="display_category"
        android:title="@string/display_header">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_dark_mode"
            android:title="@string/dark_mode_string" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_button_anim"
            android:title="@string/button_anim_string" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/key_ads_category"
        android:title="@string/ad_header">

        <DropDownPreference
            android:defaultValue="@string/ad_loc_bottom_below"
            android:entries="@array/ad_loc_vals"
            android:entryValues="@array/ad_loc_entry_vals"
            android:key="@string/key_ad_location"
            android:title="@string/ad_location_string"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="@string/key_purchase"
            android:title="@string/purchase_string" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="info_category"
        android:title="@string/info_header">

        <Preference
            android:key="@string/key_credits"
            android:title="@string/credits_string" />

        <Preference
            android:key="@string/key_feedback"
            android:summary="@string/feedback_string"
            android:title="@string/feedback_title" />
    </PreferenceCategory>

</PreferenceScreen>