<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add_combatant"
        android:icon="@drawable/plus_sign"
        android:menuCategory="alternative"
        android:title="@string/add_combatant"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/open_bookmarks"
        android:icon="@drawable/bookmarks"
        android:menuCategory="alternative"
        android:title="@string/open_bookmarks"
        android:visible="true"
        app:showAsAction="ifRoom"  />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings_24dp"
        android:menuCategory="system"
        android:title="@string/settings"
        android:visible="true"
        app:showAsAction="always" />
</menu>